--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,11 @@ spring.datasource.name=shawamacloud
 spring.datasource.url=jdbc:h2:mem:shawamacloud
 spring.datasource.username=admin
 spring.datasource.password=password
+spring.jpa.show-sql=true
 
 spring.thymeleaf.cache=false
+
+spring.h2.console.enabled=true
 
 
 #USING THIRD-PARTY AUTHENTICATION
